fix mobile spacing

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -2,6 +2,7 @@
 html {
   max-width: 100vw;
   overflow-x: hidden;
+  margin: 0;
 }
 
 html {
